# OCmaybe

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: gps_simulator.launch
src/: Camera_Process.py  demo_gps.py  image_manipulation.py  image_stitcher.py
src/calibration/: 164607418462392411.jpg:Zone.Identifier  164607426811768728.jpg:Zone.Identifier  calibrate.py  get_click_coordinates.py  imageedit_1_3040889009.jpg:Zone.Identifier
src/robot_detection/: Camera_Process.py  cv_utils.py  gps_simulator.py  image_manipulation.py  image_processor.py  image_stitching.py  undistort.py
