<?xml version="1.0"?>
<package format="3">
  <name>cv_gps_system</name>
  <version>0.0.0</version>
  <description>The cv_gps_system package</description>

  <!-- Maintainer -->
  <maintainer email="arehman@todo.todo">arehman</maintainer>

  <!-- License -->
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>parked_custom_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>parked_custom_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Export -->
  <export>
    <!-- You can add additional export information here if needed -->
  </export>
</package>
